--- a/vForum/View/Authentication/SignUpView.xib
+++ b/vForum/View/Authentication/SignUpView.xib
@@ -47,6 +47,9 @@
                     <state key="normal" title="Create new account">
                         <color key="titleColor" red="0.98823529409999999" green="0.96862745100000003" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <connections>
+                        <action selector="signUp" destination="-1" eventType="touchUpInside" id="Nlx-9e-z3P"/>
+                    </connections>
                 </button>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" id="1Gq-Aj-01c">
                     <rect key="frame" x="36" y="124" width="342" height="594"/>
