--- a/vForum/View/Forum/TopicList/ForumGroupView.xib
+++ b/vForum/View/Forum/TopicList/ForumGroupView.xib
@@ -32,11 +32,17 @@
                     </view>
                     <blurEffect style="regular"/>
                 </visualEffectView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="grouped" separatorStyle="none" rowHeight="136" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="30" id="cTS-h4-Y4x">
-                    <rect key="frame" x="0.0" y="-23" width="414" height="919"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="grouped" separatorStyle="none" rowHeight="136" estimatedRowHeight="-1" sectionHeaderHeight="10" sectionFooterHeight="30" id="cTS-h4-Y4x">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                 </tableView>
+                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="TextField" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XNM-Rc-SWb">
+                    <rect key="frame" x="0.0" y="31" width="414" height="77"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <viewLayoutGuide key="safeArea" id="96v-Lu-10E"/>
