--- a/vForum/View/Forum/AddPostTopic/AddViewController.xib
+++ b/vForum/View/Forum/AddPostTopic/AddViewController.xib
@@ -56,8 +56,11 @@
                                     <state key="normal" title="Save">
                                         <color key="titleColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </state>
+                                    <connections>
+                                        <action selector="save:" destination="-1" eventType="touchUpInside" id="Zka-tu-Hcy"/>
+                                    </connections>
                                 </button>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Descriptiom" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ukH-7k-uAD">
+                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Description" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ukH-7k-uAD">
                                     <rect key="frame" x="0.0" y="93" width="374" height="276"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
